--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ItemEdit"></activity>
+        <activity android:name=".RemovedProducts"></activity>
+        <activity android:name=".ItemEdit" />
         <activity android:name=".AddProduct" />
         <activity android:name=".Login">
             <intent-filter>
