--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RemoveItemDialog"></activity>
+        <activity android:name=".RemoveItemDialog"/>
         <activity android:name=".RemovedProducts" />
         <activity android:name=".ItemEdit" />
         <activity android:name=".AddProduct" />
