--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -12,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RemoveProductPage"></activity>
+        <activity android:name=".RemoveProductPage" />
         <activity android:name=".RemoveItemDialog" />
         <activity android:name=".RemovedProducts" />
         <activity android:name=".ItemEdit" />
@@ -35,7 +36,7 @@
             android:resource="@array/preloaded_fonts" />
 
         <receiver
-            android:name="BroadcastManager"
+            android:name=".BroadcastManager"
             android:label="BroadcastReceiverAux">
             <intent-filter>
                 <action android:name="android.media.action.DISPLAY_NOTIFICATION" />
